box: Fix click not removing elements on Firefox ( vpetrov/survana#7 )

--- a/public/css/jquery.mobile.1.3.0.css
+++ b/public/css/jquery.mobile.1.3.0.css
@@ -466,3 +466,7 @@ label:not([for]) {
 .s-slider-label20 tr td {
     width:5%;
 }
+
+.s-box-remove-button span {
+    pointer-events: none; /* let Firefox pass click events to the <a> element */
+}
